# roco2

./: .gitignore  CMakeLists.txt  README.md
cmake/: GuessArchitectureCompatability.cmake
include/roco2/: initialize.hpp  log.hpp
include/roco2/cpu/: c_state_limit.hpp  ddcm.hpp  shell.hpp
include/roco2/kernels/: addpd.hpp  compute.hpp  high_low.hpp  ppc64le_asm_kernels.h
include/roco2/memory/: thread_local.hpp
include/roco2/metrics/: cmd.hpp
include/roco2/task/: task_plan.hpp
python/: README.md
python/examples/: README.md  requirements.txt  roco-viz.ipynb
src/: CMakeLists.txt  main.cpp  metrics.cpp  ppc64le_asm_kernels.c  ppc64le_asm_kernels_example.cpp
src/configurations/: .gitignore  CMakeLists.txt
src/configurations/ariel/: CMakeLists.txt  experiment.cpp
src/configurations/charon/: experiment.cpp
src/configurations/charon_turbo/: experiment.cpp
src/configurations/conway/: CMakeLists.txt  experiment.cpp
src/configurations/example/: CMakeLists.txt  experiment.cpp
src/configurations/highlow/: CMakeLists.txt  experiment.cpp
src/configurations/highlow_1900hz/: CMakeLists.txt  experiment.cpp
src/configurations/highlow_1khz/: CMakeLists.txt  experiment.cpp
src/configurations/highlow_2100hz/: CMakeLists.txt  experiment.cpp
src/configurations/highlow_2khz/: CMakeLists.txt  experiment.cpp
src/configurations/highlow_500hz/: CMakeLists.txt  (+1 more)
src/configurations/metricq/: CMakeLists.txt  busywait.cpp  compute.cpp  experiment.cpp  experiment.hpp  matmul.cpp  mem_copy.cpp  mem_read.cpp  mem_write.cpp  sinus.cpp
src/test/: task_plan_test.cpp
(+4 files in other folders)
